# Demos

./: CMakeLists.txt  Entity.py  Game.py  GeomComponent.py  InputComponent.py  README.md  Vector.py  main.py
shaders/: default.frag  default.vert  triangles.frag  triangles.vert
src/: CMakeLists.txt  Consts.hpp  Entity.cpp  Entity.hpp  Main.cpp  Model.cpp  Model.hpp  Mouse.cpp  Mouse.hpp  Shader.cpp  Shader.hpp
src/unused/: Matrices.cpp  Matrices.hpp  Vectors.hpp
